--- a/index.html
+++ b/index.html
@@ -32,34 +32,11 @@
 		<div class="songs">
 			<div class="player">
 				<span><b>Dance</b></span>
-				<audio controls preload="metadata">
-					<source src="./assets/Thrive281220.mp3" type="audio/ogg">
+				<audio controls>
+					<source src="./assets/Thrive281220.mp3" type="audio/mpeg">
 				</audio>
 			</div>
-			<div class="player">
-				<span><b>Infinity (feat Rajan Batra) (Sony Music India)</b></span>
-				<audio controls preload="metadata">
-					<source src="./assets/Thrive281220.mp3" type="audio/ogg">
-				</audio>
-			</div>
-			<div class="player">
-				<span><b>Start Again</b></span>
-				<audio controls preload="metadata">
-					<source src="./assets/Thrive281220.mp3" type="audio/ogg">
-				</audio>
-			</div>
-			<div class="player">
-				<span><b>Incredible (feat Ayrock)</b></span>
-				<audio controls preload="metadata">
-					<source src="./assets/Thrive281220.mp3" type="audio/ogg">
-				</audio>
-			</div>
-			<div class="player">
-				<span><b>Start Again (Acoustic)</b></span>
-				<audio controls preload="metadata">
-					<source src="./assets/Thrive281220.mp3" type="audio/ogg">
-				</audio>
-			</div>
+			
 			<span class="bonus">
 				Bonus track released 12.28.20: *Start Again (Acoustic)
 			</span>
