--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<title>Document</title>
 </head>
+
 <body>
 	<div class="banner">
 		<img src="./assets/new KK.jpg" alt="KK" class="banner-img">
@@ -27,23 +32,130 @@
 			KAIULANI KIMBRELL: Pre-Release Access
 		</div>
 		<div class="subtitle">
-			For your consideration:Here are 4 select tracks from Kaiulani’s upcoming release: <b><i>After the Storm</i></b> 
+			For your consideration:Here are 4 select tracks from Kaiulani’s upcoming release: <b><i>After the
+					Storm</i></b>
 		</div>
 		<div class="songs">
-			<div class="player">
-				<span><b>Dance</b></span>
-				<audio controls>
-					<source src="./assets/Thrive281220.mp3" type="audio/mpeg">
-				</audio>
+			<div class="main">
+				<!--- left part --->
+				<div class="left">
+
+					<!--- song img --->
+					<img src="./assets/thrive.jpg">
+
+				</div>
+				<div class="middle">
+					<p id="title">Thrive</p>
+				</div>
+
+
+				<!--- right part --->
+				<div class="right">
+
+					<!--- song title & artist name --->
+
+
+					<!--- middle part --->
+					<div class="play">
+						<button onclick="justplay(track_thrive)" id="play_thrive"><i class="fa fa-play"
+								aria-hidden="true"></i></button>
+					</div>
+
+					<!--- song duration part --->
+					<div class="duration">
+						<input type="range" min="0" max="100" value="0" id="duration_slider_thrive"
+							onchange="change_duration(track_thrive)">
+					</div>
+					<div class="volume">
+						<p id="volume_show_thrive">90</p>
+						<i class="fa fa-volume-up" aria-hidden="true" onclick="mute_sound(track_thrive)"
+							id="volume_icon"></i>
+						<input type="range" min="0" max="100" value="90" onchange="volume_change(track_thrive)"
+							id="volume_thrive">
+					</div>
+				</div>
 			</div>
-			
-			<span class="bonus">
-				Bonus track released 12.28.20: *Start Again (Acoustic)
-			</span>
+
+			<div class="main">
+				<!--- left part --->
+				<div class="left">
+
+					<!--- song img --->
+					<img src="./assets/infinity.jpg">
+
+				</div>
+				<div class="middle">
+					<p id="title">Infinity (feat Rajan Batra) (Sony Music India)</p>
+				</div>
+
+				<!--- right part --->
+				<div class="right">
+
+
+
+
+					<!--- middle part --->
+					<div class="play">
+						<button onclick="justplay(track_infinity)" id="play_infinity"><i class="fa fa-play"
+								aria-hidden="true"></i></button>
+					</div>
+
+					<!--- song duration part --->
+					<div class="duration">
+						<input type="range" min="0" max="100" value="0" id="duration_slider_infinity"
+							onchange="change_duration(track_infinity)">
+					</div>
+					<div class="volume">
+						<p id="volume_show_infinity">90</p>
+						<i class="fa fa-volume-up" aria-hidden="true" onclick="mute_sound(track_infinity)"
+							id="volume_icon"></i>
+						<input type="range" min="0" max="100" value="90" onchange="volume_change(track_infinity)"
+							id="volume_infinity">
+					</div>
+				</div>
+			</div>
+
+			<div class="main">
+				<!--- left part --->
+				<div class="left">
+
+					<!--- song img --->
+					<img src="./assets/startagain.jpg">
+
+				</div>
+				<div class="middle">
+					<p id="title">Bonus track released 12.28.20: *Start Again (Acoustic)</p>
+				</div>
+
+				<!--- right part --->
+				<div class="right">
+
+
+
+					<!--- middle part --->
+					<div class="play">
+						<button onclick="justplay(track_start_again)" id="play_start_again"><i class="fa fa-play"
+								aria-hidden="true"></i></button>
+					</div>
+
+					<!--- song duration part --->
+					<div class="duration">
+						<input type="range" min="0" max="100" value="0" id="duration_slider_start_again"
+							onchange="change_duration(track_start_again)">
+					</div>
+					<div class="volume">
+						<p id="volume_show_start_again">90</p>
+						<i class="fa fa-volume-up" aria-hidden="true" onclick="mute_sound(track_start_again)"
+							id="volume_icon"></i>
+						<input type="range" min="0" max="100" value="90" onchange="volume_change(track_start_again)"
+							id="volume_start_again">
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="footer">
 			<span>
-				For inquiries email: 
+				For inquiries email:
 				<span>
 					kaiulanimusic@gmail.com
 				</span>
@@ -59,5 +171,12 @@
 	<div class="img-1"></div>
 	<div class="img-2"></div>
 	<div class="img-3"></div>
+
+
+
+
+	<!--- Add javascript file --->
+	<script src="script.js"></script>
 </body>
+
 </html>
