all songs added and thrive removed

--- a/index.html
+++ b/index.html
@@ -36,28 +36,29 @@
 		</div>
 		<div class="songs">
 
+			<!-- Dance -->
 			<div class="main">
 				<div class="left">
-					<img src="./assets/thrive.jpg">
+					<img src="./assets/music-icon.png">
 				</div>
 				<div class="right-outer">
 					<div class="middle">
 						<div class="play">
-							<button onclick="justplay(track_thrive)" id="play_thrive"><i class="fa fa-play"
+							<button onclick="justplay(track_dance)" id="play_dance"><i class="fa fa-play"
 									aria-hidden="true"></i></button>
 						</div>
-						<p id="title">Thrive</p>
+						<p id="title">Dance</p>
 					</div>
 					<div class="right">
 						<div class="duration">
-							<input type="range" min="0" max="100" value="0" id="duration_slider_thrive"
-								onchange="change_duration(track_thrive)">
+							<input type="range" min="0" max="100" value="0" id="duration_slider_dance"
+								onchange="change_duration(track_dance)">
 						</div>
 					</div>
 				</div>
-
 			</div>
 
+			<!-- Infinity -->
 			<div class="main">
 				<div class="left">
 					<img src="./assets/infinity.jpg">
@@ -78,6 +79,52 @@
 					</div>
 				</div>
 			</div>
+
+			<!-- Start Again -->
+			<div class="main">
+				<div class="left">
+					<img src="./assets/startagainproduce.jpg">
+				</div>
+				<div class="right-outer">
+					<div class="middle">
+						<div class="play">
+							<button onclick="justplay(track_start_again_produce)" id="play_start_again_produce"><i class="fa fa-play"
+									aria-hidden="true"></i></button>
+						</div>
+						<p id="title">Start Again</p>
+					</div>
+					<div class="right">
+						<div class="duration">
+							<input type="range" min="0" max="100" value="0" id="duration_slider_start_again_produce"
+								onchange="change_duration(track_start_again_produce)">
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<!-- Incredible -->
+			<div class="main">
+				<div class="left">
+					<img src="./assets/music-icon.png">
+				</div>
+				<div class="right-outer">
+					<div class="middle">
+						<div class="play">
+							<button onclick="justplay(track_incredible)" id="play_incredible"><i class="fa fa-play"
+									aria-hidden="true"></i></button>
+						</div>
+						<p id="title">Incredible (feat Ayrock)</p>
+					</div>
+					<div class="right">
+						<div class="duration">
+							<input type="range" min="0" max="100" value="0" id="duration_slider_incredible"
+								onchange="change_duration(track_incredible)">
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<!-- Start Again(Acoustic) -->
 			<div class="main">
 				<div class="left">
 					<img src="./assets/startagain.jpg">
@@ -99,6 +146,7 @@
 				</div>
 
 			</div>
+
 		</div>
 		<div class="about-img">
 		<img src="./assets/new KK.jpg" alt="">
