--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
 	<!--- Add javascript file --->
-	<script src="script.js"></script>
+	<script defer src="script.js"></script>
 </body>
 
 </html>
