--- a/index.html
+++ b/index.html
@@ -16,26 +16,39 @@
 
 <body>
 	<div class="banner">
-		<img src="./assets/Banner-image-1.png" alt="KK" class="banner-img">
-		<!-- <div class="name">
-			<div class="first-name">
-				<span>K</span><span>AIULANI</span>
-			</div>
-			<div class="last-name">
-				<span>K</span><span>IMBRELL</span>
-			</div>
-
-		</div> -->
+		<img src="./assets/Banner-image-3.png" alt="KK" class="banner-img">
 	</div>
 	<div class="content">
 		<div class="title">
 			KAIULANI KIMBRELL: Pre-Release Access
 		</div>
 		<div class="subtitle">
-			For your consideration:Here are 4 select tracks from Kaiulani’s upcoming release: <b><i>Start Again...Live Again</i></b>
+			For your consideration, please find select tracks from Kaiulani's upcoming album release.  
 		</div>
 		<div class="songs">
 
+			<!-- Infinity -->
+			<div class="main">
+				<div class="left">
+					<img src="./assets/music-icon.png">
+				</div>
+				<div class="right-outer">
+					<div class="middle">
+						<div class="play">
+							<button onclick="justplay(track_infinity)" id="play_infinity"><i class="fa fa-play"
+									aria-hidden="true"></i></button>
+						</div>
+						<p id="title">Infinity (feat Rajan Batra) (Sony Music India)</p>
+					</div>
+					<div class="right">
+						<div class="duration">
+							<input type="range" min="0" max="100" value="0" id="duration_slider_infinity"
+								onchange="change_duration(track_infinity)">
+						</div>
+					</div>
+				</div>
+			</div>
+			
 			<!-- Dance -->
 			<div class="main">
 				<div class="left">
@@ -58,32 +71,10 @@
 				</div>
 			</div>
 
-			<!-- Infinity -->
-			<div class="main">
-				<div class="left">
-					<img src="./assets/infinity.jpg">
-				</div>
-				<div class="right-outer">
-					<div class="middle">
-						<div class="play">
-							<button onclick="justplay(track_infinity)" id="play_infinity"><i class="fa fa-play"
-									aria-hidden="true"></i></button>
-						</div>
-						<p id="title">Infinity (feat Rajan Batra) (Sony Music India)</p>
-					</div>
-					<div class="right">
-						<div class="duration">
-							<input type="range" min="0" max="100" value="0" id="duration_slider_infinity"
-								onchange="change_duration(track_infinity)">
-						</div>
-					</div>
-				</div>
-			</div>
-
 			<!-- Start Again -->
 			<div class="main">
 				<div class="left">
-					<img src="./assets/startagainproduce.jpg">
+					<img src="./assets/music-icon.png">
 				</div>
 				<div class="right-outer">
 					<div class="middle">
@@ -127,7 +118,7 @@
 			<!-- Start Again(Acoustic) -->
 			<div class="main">
 				<div class="left">
-					<img src="./assets/startagain.jpg">
+					<img src="./assets/music-icon.png">
 				</div>
 				<div class="right-outer">
 					<div class="middle">
@@ -152,15 +143,28 @@
 		<img src="./assets/new KK.jpg" alt="">
 		<div class="about-content">
 			<p class="about-title">ABOUT</p>
-			<p class="about-inner-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, repellendus? Blanditiis dolorem eius quaerat dolor ut eos quas, voluptatum ullam.</p>
+			<div class="about-inner-content">
+				<p>Kaiulani is a piano driven singer/songwriter creating a broad range of cinematic pop.</p>
+				<p>Her upcoming release was created in Mumbai, India with Sony Music producer Himonshu Parikh, and finished in Los Angeles with producer Julian Feifel.</p>
+				<p>Influenced by her NY upbringing infiltrated with hip hop/street music, classical music and musical theatre, Kaiulani has a diverse musical palate rooted in melody, beat and message.</p>
+			</div>
 		</div>
 	</div>
 		<div class="footer">
 			<span>
-				For inquiries email:
-				<span>
-					kaiulanimusic@gmail.com
-				</span>
+				For inquiries 
+				<div>
+					<span>email:</span>
+					<span id="email">
+						kaiulanimusic@gmail.com
+					</span>
+				</div>
+				<div>
+					<span>phone:</span>
+					<span id="phone">
+						323.243.0364
+					</span>
+				</div>
 			</span>
 			<span>
 				This is a private, invite only, secured page.
