made the changes and restore the banner image

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
 <body>
 	<div class="banner">
-		<img src="./assets/Banner-image-3.png" alt="KK" class="banner-img">
+		<img src="./assets/Banner-image-1.png" alt="KK" class="banner-img">
 	</div>
 	<div class="content">
 		<div class="title">
-			KAIULANI KIMBRELL: Pre-Release Access
+			<span>KAIULANI KIMBRELL:</span>
+			<span>Pre-Release Access</span>
 		</div>
 		<div class="subtitle">
 			For your consideration, please find select tracks from Kaiulani's upcoming album release.  
@@ -30,7 +31,7 @@
 			<!-- Infinity -->
 			<div class="main">
 				<div class="left">
-					<img src="./assets/music-icon.png">
+					<img src="./assets/infinity.jpg">
 				</div>
 				<div class="right-outer">
 					<div class="middle">
@@ -52,7 +53,7 @@
 			<!-- Dance -->
 			<div class="main">
 				<div class="left">
-					<img src="./assets/music-icon.png">
+					<img src="./assets/dance.jpg">
 				</div>
 				<div class="right-outer">
 					<div class="middle">
@@ -69,12 +70,13 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
 
 			<!-- Start Again -->
 			<div class="main">
 				<div class="left">
-					<img src="./assets/music-icon.png">
+					<img src="./assets/startagainproduce.png">
 				</div>
 				<div class="right-outer">
 					<div class="middle">
@@ -96,7 +98,7 @@
 			<!-- Incredible -->
 			<div class="main">
 				<div class="left">
-					<img src="./assets/music-icon.png">
+					<img src="./assets/incredible.jpg">
 				</div>
 				<div class="right-outer">
 					<div class="middle">
@@ -118,7 +120,7 @@
 			<!-- Start Again(Acoustic) -->
 			<div class="main">
 				<div class="left">
-					<img src="./assets/music-icon.png">
+					<img src="./assets/startagain.png">
 				</div>
 				<div class="right-outer">
 					<div class="middle">
@@ -140,7 +142,7 @@
 
 		</div>
 		<div class="about-img">
-		<img src="./assets/new KK.jpg" alt="">
+		<img class="bio-img" src="./assets/new KK.jpg" alt="">
 		<div class="about-content">
 			<p class="about-title">ABOUT</p>
 			<div class="about-inner-content">
@@ -167,7 +169,7 @@
 				</div>
 			</span>
 			<span>
-				This is a private, invite only, secured page.
+				This is a private, secured page. You are here by invite only.
 			</span>
 			<span>
 				© 2021 Kaiulani Kimbrell
