changes made on call

--- a/private/unreleased.html
+++ b/private/unreleased.html
@@ -20,11 +20,10 @@
 	</div>
 	<div class="content">
 		<div class="title">
-			<span>KAIULANI KIMBRELL:</span>
-			<span>Pre-Release Access</span>
+			<span>PRE-RELEASE ACCESS</span>
 		</div>
 		<div class="subtitle">
-			For your consideration, please find select tracks from Kaiulani's upcoming album release.  
+			Below are select tracks from Kaiulani’s upcoming album <i> “Start Again... Live Again”</i>.
 		</div>
 		<div class="songs">
 
@@ -39,7 +38,7 @@
 							<button onclick="justplay(track_infinity)" id="play_infinity"><i class="fa fa-play"
 									aria-hidden="true"></i></button>
 						</div>
-						<p id="title">Infinity (feat Rajan Batra) (Sony Music India)</p>
+						<p id="title">Infinity (feat. Rajan Batra) </p>
 					</div>
 					<div class="right">
 						<div class="duration">
@@ -106,7 +105,7 @@
 							<button onclick="justplay(track_incredible)" id="play_incredible"><i class="fa fa-play"
 									aria-hidden="true"></i></button>
 						</div>
-						<p id="title">Incredible (feat Ayrock)</p>
+						<p id="title">Incredible (feat. Ay-Rock)</p>
 					</div>
 					<div class="right">
 						<div class="duration">
@@ -128,7 +127,7 @@
 							<button onclick="justplay(track_start_again)" id="play_start_again"><i class="fa fa-play"
 									aria-hidden="true"></i></button>
 						</div>
-						<p id="title">Bonus track released 12.28.20: *Start Again (Acoustic)</p>
+						<p id="title">*Bonus track* Start Again (Acoustic)</p>
 					</div>
 					<div class="right">
 						<div class="duration">
@@ -146,30 +145,26 @@
 		<div class="about-content">
 			<p class="about-title">ABOUT</p>
 			<div class="about-inner-content">
-				<p>Kaiulani is a piano driven singer/songwriter creating a broad range of cinematic pop.</p>
-				<p>Her upcoming release was created in Mumbai, India with Sony Music producer Himonshu Parikh, and finished in Los Angeles with producer Julian Feifel.</p>
-				<p>Influenced by her NY upbringing infiltrated with hip hop/street music, classical music and musical theatre, Kaiulani has a diverse musical palate rooted in melody, beat and message.</p>
+				<p>Kaiulani is a piano driven singer/songwriter creating a broad range of cinematic, uplifting, thoughtful pop.</p>
+				<p>Her upcoming release was recorded in Mumbai, India with Sony Music producer Himonshu Parikh, and finished in Los Angeles with producer Julian Feifel.</p>
+				<p>Influenced by her New York City upbringing, which was infiltrated with hip hop / street music, classical music and musical theatre, Kaiulani has a diverse musical palate rooted in melody, beat and message.</p>
 			</div>
 		</div>
 	</div>
 		<div class="footer">
 			<span>
-				For inquiries 
+				Contacts
 				<div>
-					<span>email:</span>
 					<span id="email">
 						kaiulanimusic@gmail.com
 					</span>
-				</div>
-				<div>
-					<span>phone:</span>
 					<span id="phone">
 						323.243.0364
 					</span>
 				</div>
 			</span>
 			<span>
-				This is a private, secured page. You are here by invite only.
+				This is a private, invite only page.
 			</span>
 			<span>
 				© 2021 Kaiulani Kimbrell
