footer group changes done

--- a/private/unreleased.html
+++ b/private/unreleased.html
@@ -23,7 +23,12 @@
 			<span>PRE-RELEASE ACCESS</span>
 		</div>
 		<div class="subtitle">
-			Below are select tracks from Kaiulani’s upcoming album <i> “Start Again... Live Again”</i>.
+			<span>
+				Below are select tracks from Kaiulani’s upcoming album 
+			</span>
+			<span>
+				<i>“Start Again... Live Again”</i>.
+			</span> 
 		</div>
 		<div class="songs">
 
@@ -152,9 +157,9 @@
 		</div>
 	</div>
 		<div class="footer">
-			<span>
-				Contacts
-				<div>
+			<span class="contact">
+				Contact:
+				<div class="contact-inner">
 					<span id="email">
 						kaiulanimusic@gmail.com
 					</span>
@@ -164,7 +169,7 @@
 				</div>
 			</span>
 			<span>
-				This is a private, invite only page.
+				This is a private, invite-only page.
 			</span>
 			<span>
 				© 2021 Kaiulani Kimbrell
