veil image added to banner

--- a/private/unreleased.html
+++ b/private/unreleased.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div class="banner">
-		<img src="./assets/Banner-image-1.png" alt="KK" class="banner-img">
+		<img src="./assets/Banner-image-4.png" alt="KK" class="banner-img">
 	</div>
 	<div class="content">
 		<div class="title">
@@ -168,12 +168,14 @@
 					</span>
 				</div>
 			</span>
-			<span>
-				This is a private, invite-only page.
-			</span>
-			<span>
-				© 2021 Kaiulani Kimbrell
-			</span>
+			<div class="copyright">
+				<span>
+					This is a private, invite-only page.
+				</span>
+				<span>
+					© 2021 Kaiulani Kimbrell
+				</span>
+			</div>
 		</div>
 	</div>
 	
