--- a/private/unreleased.html
+++ b/private/unreleased.html
@@ -152,7 +152,7 @@
 			<div class="about-inner-content">
 				<p>Kaiulani is a piano driven singer/songwriter creating a broad range of cinematic, uplifting, thoughtful pop.</p>
 				<p>Her upcoming release was recorded in Mumbai, India with Sony Music producer Himonshu Parikh, and finished in Los Angeles with producer Julian Feifel.</p>
-				<p>Influenced by her New York City upbringing, which was infiltrated with hip hop / street music, classical music and musical theatre, Kaiulani has a diverse musical palate rooted in melody, beat and message.</p>
+				<p>Influenced by her New York City upbringing, which was infiltrated with hiphop-street music, classical music and musical theatre, Kaiulani has a diverse musical palate rooted in melody, beat and message.</p>
 			</div>
 		</div>
 	</div>
