--- a/private/unreleased.html
+++ b/private/unreleased.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div class="banner">
-		<img src="./assets/Banner-image-4.png" alt="KK" class="banner-img">
+		<img src="./assets/Banner-image-1.png" alt="KK" class="banner-img">
 	</div>
 	<div class="content">
 		<div class="title">
@@ -150,7 +150,7 @@
 		<div class="about-content">
 			<p class="about-title">ABOUT</p>
 			<div class="about-inner-content">
-				<p>Kaiulani is a piano driven singer/songwriter creating a broad range of cinematic, uplifting, thoughtful pop.</p>
+				<p>Kaiulani is a piano inspired singer/songwriter creating a broad range of cinematic, uplifting, thoughtful pop.</p>
 				<p>Her upcoming release was recorded in Mumbai, India with Sony Music producer Himonshu Parikh, and finished in Los Angeles with producer Julian Feifel.</p>
 				<p>Influenced by her New York City upbringing, which was infiltrated with hip hop/street music, classical music and musical theatre, Kaiulani has a diverse musical palate rooted in melody, beat and message.</p>
 			</div>
