all videos loaded other than incredible

--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
 						<a href="./videos.html">
 							<li>Lyric Videos</li>
 						</a>
-						<a href="./about.html">
+						<!-- <a href="./about.html">
 							<li>About</li>
-						</a>
+						</a> -->
 					</ul>
 				</div>
 			</div>
