--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<!-- left -->
 			<div class="header-left">
 				<!-- menu-hamburger -->
-				<!-- <div id="menuToggle">
+				<div id="menuToggle">
 					<input type="checkbox" />
 					<span class="length-1"></span>
 					<span class="length-2"></span>
@@ -36,11 +36,11 @@
 						<a href="./videos.html">
 							<li>Lyric Videos</li>
 						</a>
-						<a href="./about.html">
+						<!-- <a href="./about.html">
 							<li>About</li>
-						</a>
+						</a> -->
 					</ul>
-				</div> -->
+				</div>
 			</div>
 
 			<!-- right -->
