--- a/videos.html
+++ b/videos.html
@@ -37,9 +37,9 @@
 						<a href="./videos.html">
 							<li>Lyric Videos</li>
 						</a>
-						<a href="./about.html">
+						<!-- <a href="./about.html">
 							<li>About</li>
-						</a>
+						</a> -->
 					</ul>
 				</div>
 			</div>
@@ -67,40 +67,8 @@
 		<!-- LYRIC VIDEOS SECTION -->
 		<div class="video-section">
 
-			<!-- INFINITY -->
-			<div class="song-wrapper bg-infinity">
-				<div class="blur">
-					<div class="song-title">
-						infinity
-					</div>
-					<div class="song-video">
-						<iframe src="https://www.youtube.com/embed/fzoQ8VPYsQ8?start=8" title="YouTube video player"
-							frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe>
-					</div>
-				</div>
-
-			</div>
-
-			<!-- START AGAIN PRODUCED-->
-			<div class="song-wrapper bg-start-again">
-				<div class="blur">
-					<div class="song-title">
-						start again
-					</div>
-					<div class="song-video">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/fzoQ8VPYsQ8?start=8"
-							title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe>
-					</div>
-				</div>
-
-			</div>
-
 			<!-- INCREDIBLE -->
-			<div class="song-wrapper bg-incredible">
+			<!-- <div class="song-wrapper bg-incredible">
 				<div class="blur">
 					<div class="song-title">
 						Incredible
@@ -113,7 +81,7 @@
 					</div>
 				</div>
 
-			</div>
+			</div> -->
 
 			<!-- UNBREAKABLE -->
 			<div class="song-wrapper bg-unbreakable">
@@ -122,7 +90,7 @@
 						Unbreakable
 					</div>
 					<div class="song-video">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/fzoQ8VPYsQ8?start=8"
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/WyAiwXfF14k"
 							title="YouTube video player" frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
@@ -138,7 +106,23 @@
 						Dance
 					</div>
 					<div class="song-video">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/fzoQ8VPYsQ8?start=8"
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/B7ILE5DqqRw"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
+					</div>
+				</div>
+
+			</div>
+
+			<!-- START AGAIN PRODUCED-->
+			<div class="song-wrapper bg-start-again">
+				<div class="blur">
+					<div class="song-title">
+						start again
+					</div>
+					<div class="song-video">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/LxJly5zleBw"
 							title="YouTube video player" frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
@@ -154,7 +138,7 @@
 						Limitless
 					</div>
 					<div class="song-video">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/fzoQ8VPYsQ8?start=8"
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/6UIDhx23Q2Y"
 							title="YouTube video player" frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
@@ -170,8 +154,24 @@
 						Beautiful
 					</div>
 					<div class="song-video">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/fzoQ8VPYsQ8?start=8"
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/uGnleFRE8FI"
 							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
+					</div>
+				</div>
+
+			</div>
+
+			<!-- INFINITY -->
+			<div class="song-wrapper bg-infinity">
+				<div class="blur">
+					<div class="song-title">
+						infinity
+					</div>
+					<div class="song-video">
+						<iframe src="https://www.youtube.com/embed/KshwtXPu868" title="YouTube video player"
+							frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
 					</div>
@@ -186,7 +186,7 @@
 						Start Again [Bonus Track] - Acoustic
 					</div>
 					<div class="song-video">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/fzoQ8VPYsQ8?start=8"
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/Y650-w1AtV4"
 							title="YouTube video player" frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
