--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</div>
 				<!-- instagramm -->
 				<div class="nav-title">
-					<a class="no-dec" href="https://www.instagram.com/kaiulaniofficial/">
+					<a class="no-dec" href="https://www.instagram.com/kaiulani.kimbrell/">
 						instagram
 					</a>
 				</div>
